# server/server.js
@@ -2,9 +2,20 @@ const app = require('./config/express')();
 const port = app.get('port'); 
 const { admin }= require("./config/firestoreConfig"); // <- this exports firebase-admin 
 const userRouter = require('./routes/user.routes');
-require('dotenv').config({ path: './config/.env' });
+const swaggerUI = require('swagger-ui-express');
+const swaggerFile = require('./swagger-output.json');
+const cors = require('cors');
 
-app.use('/api/auth', userRouter); 
+require('dotenv').config({ path: './config/.env' });
+app.use(cors());
+app.use(cors({
+  origin: "http://localhost:3000",
+  methods: ["GET", "POST", "PUT", "DELETE"],
+  allowHeaders: ["Content-Type", "Authorization"]
+}));
+app.use('/api/auth', userRouter);                                 
+app.use('api/docs', swaggerUI.serve, swaggerUI.setup(swaggerFile)); // swagger config 
+
 app.listen(port, async () => { 
   console.log(`server running on port ${port}`); 
   try { 
