# src/App.js
@@ -6,6 +6,7 @@ import Dashboard from './pages/Dashboard';
 import Oficinas from './pages/Oficinas';
 import Alunos from './pages/Alunos';
 import Professores from './pages/Professores';
+import Login from './pages/Login';
 import styles from './App.module.css';
 
 function App() {
@@ -20,6 +21,7 @@ function App() {
             <Route path="/oficinas" element={<Oficinas />} />
             <Route path="/alunos" element={<Alunos />} />
             <Route path="/professores" element={<Professores />} />
+            <Route path="/login" element={<Login />} />
           </Routes>
         </main>
         <Footer />
